# kloppy

./: .gitignore  .pre-commit-config.yaml  CHANGES.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  build-and-release.sh  docs-requirements.txt  main.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  test.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: release.yml  test-linux.yml  test-windows.yml  test.yml
docs/: CNAME  about.md  build.sh  changelog.md  contributing.md  contributors.md  create-notebook.py  index.md  license.md  macros.py  open-data.md  providers.md  sponsors.md  style.css
docs/api/: helpers.md  loading_data.md  main.md
docs/api/domain/: common.md  event.md  pitch.md  tracking.md
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: style.css
docs/contributor-guide/: add-new-provider.md  contributing-code.md  contributing-docs.md  contributing.md  dev-environment.md  issues.md
docs/examples/: adapter.ipynb  aggregations.ipynb  broadcast_tracking_data.ipynb  code_data.ipynb  config.ipynb  enrich_with_tracking.md  event_data.ipynb  event_factory.ipynb  index.md  navigating.ipynb  pattern_matching.ipynb  plotting.ipynb  state.ipynb  to_dataframe.ipynb  tracking_data.ipynb  transformations.ipynb
docs/functionality/: coordinate-systems.md  event-data.md  providers.md  tracking-data.md
docs/getting-started/: datafactory.ipynb  metrica.ipynb  opta.ipynb  pff.ipynb  pff_fc.ipynb  secondspectrum.ipynb  skillcorner.ipynb  sportec.ipynb  sportscode.ipynb  statsbomb.ipynb  statsperform.ipynb  tracab.ipynb  wyscout.ipynb
docs/overrides/: home.html  main.html
docs/presentations/friends_of_tracking_part1/: Pattern Matching - Part 1.ipynb  matcher.py
docs/presentations/pysport-meetup-april-2023/: Kloppy x DuckDB.ipynb
docs/presentations/working_with_event_data/: Untitled.ipynb  Working with event data.ipynb  events.json  lineup.json
docs/providers/: index.md  opta.ipynb  secondspectrum.ipynb  wyscout.ipynb
docs/quickstart/: broadcast_tracking_data.ipynb  code_data.ipynb  event_data.ipynb  examples.ipynb  state.ipynb  tracking_data.ipynb
docs/reference/: config.md  exceptions.md  helpers.md  index.md  io.md
docs/reference/code-data/: index.md
docs/reference/domain/: index.md  provider.md  team.md  tracking-dataset.md
docs/reference/event-data/: index.md  spec.yaml
docs/reference/providers/: datafactory.md  hawkeye.md  impect.md  metrica.md  opta.md  pff.md  secondspectrum.md  signality.md  skillcorner.md  spec.yaml  sportec.md  sportscode.md  statsbomb.md  statsperform.md  tracab.md  wyscout.md
docs/reference/tracking-data/: index.md
docs/tutorials/examples/: code_data.ipynb  config.ipynb  navigating.ipynb  state.ipynb  tracking_data.ipynb
docs/user-guide/: code-data.md  configuration.md  coordinate-system.md  event-data.md  getting-started.md  installation.md  state.md  tracking-data.md
docs/user-guide/aggregating-data/: index.md
docs/user-guide/concepts/: code-data.md  event-data.md  index.md  metadata.md  tracking-data.md
docs/user-guide/configuration/: index.md
docs/user-guide/dataframe/: index.md
docs/user-guide/datasets/: event-data.md  index.md  tracking-data.md
docs/user-guide/enriching-data/: index.md
docs/user-guide/exporting-data/: dataframes.md  index.md  sportscode.md
docs/user-guide/getting-started/: index.md
docs/user-guide/installation/: index.md
docs/user-guide/loading-data/: datafactory.ipynb  hawkeye.ipynb  impect.ipynb  index.md  metrica.ipynb  pff.ipynb  scisports.ipynb  secondspectrum.ipynb  signality.ipynb  skillcorner.ipynb  sportec.ipynb  sportscode.ipynb  statsbomb.ipynb  statsperform.ipynb  tracab.ipynb  wyscout.ipynb
docs/user-guide/providers/: datafactory.ipynb  index.md  pff.ipynb  skillcorner.ipynb  sportscode.ipynb  statsbomb.ipynb  statsperform.ipynb
docs/user-guide/querying-data/: index.md
docs/user-guide/transformations/: index.md
docs/utils/: macros.py
examples/: opta.py  playing_time.py
examples/datasets/: metrica.py  statsbomb.py  wyscout.py
examples/epts/: load_epts_into_pandas.py
examples/pattern_matching/: ball_recovery.py
examples/pattern_matching/repository/: README.md  ball_recovery.py
kloppy/: CHANGES.txt  __init__.py  cdf.py  cmdline.py  config.py  datafactory.py  datasets.py  event_pattern_matching.py  exceptions.py  hawkeye.py  helpers.py  impect.py  io.py  korastats.py  metrica.py  opta.py  pff.py  pff_fc.py  scisports.py  secondspectrum.py  signality.py  skillcorner.py  smrtstats.py  sportec.py  sportscode.py  statsbomb.py  statsperform.py  tracab.py  utils.py  wyscout.py
kloppy/_providers/: cdf.py  datafactory.py  hawkeye.py  impect.py  korastats.py  metrica.py  opta.py  pff.py  pff_fc.py  respovision.py  scisports.py  secondspectrum.py  signality.py  skillcorner.py  smrtstats.py  sportec.py  sportscode.py  statsbomb.py  statsperform.py  tracab.py  wyscout.py
kloppy/_utils/: __init__.py  deprecation.py  docstrings.py  io.py  logging.py  optional.py  strings.py  testing.py
kloppy/domain/: __init__.py
kloppy/domain/models/: __init__.py  code.py  (+9 more)
kloppy/infra/: utils.py
kloppy/tests/: conftest.py  examplerawdata.txt  moto_patch.py  test_adapter.py  test_addition.py  test_attribute_transformer.py  test_cdf.py  test_config.py  test_datafactory.py  test_deserializer_cdf.py  test_enricher.py  test_epts.py  test_event.py  test_event_deducer.py  test_hawkeye.py  test_helpers.py  test_impect.py  test_io.py  test_it_works.py  test_korastats.py  test_metadata.py  test_metrica.py  test_metrica_csv.py  test_metrica_epts.py  test_metrica_events.py  test_opta.py  test_optional_dependencies.py  test_pff.py  test_player.py  test_scisports.py  test_scisports_epts.py  test_second_spectrum.py  test_secondspectrum.py  test_secondspectrum_events.py  test_signality.py  test_skillcorner.py  test_smrtstats.py  test_sportec.py  test_state_builder.py  test_statsbomb.py  (+10 more)
paper/: paper.bib  paper.md
paper/jats/: paper.jats
tests/: test_secondspectrum.py
(+406 files in other folders)
